--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-# API Base URL for the backend server
-VITE_API_BASE_URL=http://localhost:3000
+# Backend API URL (server-side only - not exposed to browser)
+API_BASE_URL=http://localhost:5000
