🐳 docker: update docker for next

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-# Backend API URL (server-side only - not exposed to browser)
+# Backend API URL (server-side only - used by Next.js API routes)
 API_BASE_URL=http://localhost:5000
