--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,15 @@
-version: '3.8'
-
 services:
   frontend:
     build:
       context: .
       dockerfile: Dockerfile
-      args:
-        VITE_API_BASE_URL: ${VITE_API_BASE_URL:-http://localhost:3000}
     ports:
-      - "${PORT:-8080}:80"
+      - "${PORT:-8080}:3000"
+    environment:
+      - API_BASE_URL=${API_BASE_URL:-http://host.docker.internal:5000}
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:80/health"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000/"]
       interval: 30s
       timeout: 3s
       retries: 3
@@ -25,9 +23,9 @@ services:
       - .:/app
       - /app/node_modules
     ports:
-      - "${DEV_PORT:-5173}:5173"
+      - "${DEV_PORT:-3001}:3000"
     environment:
-      - VITE_API_BASE_URL=${VITE_API_BASE_URL:-http://localhost:3000}
-    command: sh -c "npm install && npm run dev -- --host 0.0.0.0"
+      - API_BASE_URL=${API_BASE_URL:-http://host.docker.internal:5000}
+    command: sh -c "npm install && npm run dev"
     profiles:
       - dev
