--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,11 +21,16 @@ services:
     working_dir: /app
     volumes:
       - .:/app
-      - /app/node_modules
+      - node_modules:/app/node_modules
     ports:
       - "${DEV_PORT:-3001}:3000"
     environment:
       - API_BASE_URL=${API_BASE_URL:-http://host.docker.internal:5000}
+      - WATCHPACK_POLLING=true
+      - CHOKIDAR_USEPOLLING=true
     command: sh -c "npm install && npm run dev"
     profiles:
       - dev
+
+volumes:
+  node_modules:
